Make op parameter to mux_keyboard() u_int instead of int. This should fix sparc64 messages like

Sep 15 11:17:39 peahi kernel: WARNING pid 5477 (kbdcontrol): ioctl sign-extension ioctl ffffffff80244b45

PR:		sparc64/96798
MFC after:	1 week

Former-commit-id: 08d51e0bd53dc5b48425289c9448ac8f5af308e6